@@ -2,7 +2,7 @@ plugins {
     id "java-library"
     id "maven-publish"
     id "io.spring.dependency-management" version "$version_springDependencyManagement"
-    id "name.remal.sonarlint" version "4.0.0"
+    id "name.remal.sonarlint" version "$version_nameRemalSonarlint"
     id "checkstyle"
     id "jacoco"
 }
@@ -17,8 +17,19 @@ dependencyManagement {
     }
 }
 
-[compileJava, compileTestJava]*.options*.encoding = "UTF-8"
-[compileJava, compileTestJava]*.options*.debug = true
+def versions = [:]
+versions["checkstyle"] = "10.17.0"
+ext.set("versions", versions)
+
+// configurations.configureEach {
+//     exclude group: "ch.qos.logback", module: "logback-classic"
+// }
+
+//// Register ANT-Tasks as Gradle-Tasks with Prefix "ant-" in Group "other".
+//ant.importBuild("ant_build.xml") { antTargetName -> "ant-" + antTargetName }
+//
+//// Set group property for all Ant tasks.
+//tasks.matching { task -> task.name.startsWith("ant-") }.configureEach{ group = "Ant" }
 
 dependencies {
     //implementation(platform("org.springframework.boot:spring-boot-dependencies:$version_springBoot"))
@@ -29,23 +40,31 @@ dependencies {
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
+clean {
+    doFirst {
+        Directory dir = layout.projectDirectory.dir("target")
+
+        if (dir.getAsFile().exists()) {
+            println("delete: " + dir)
+            // delete fileTree(dir).include("**/*")
+            delete dir
+        }
+    }
+}
+
 java {
     //sourceCompatibility = 22
     //targetCompatibility = 22
 
     toolchain {
         languageVersion = JavaLanguageVersion.of(22)
+        // vendor = JvmVendorSpec.ORACLE
+        // implementation = JvmImplementation.J9
     }
-}
 
-javadoc {
-    enabled = true
-
-    // No Errors for missing JavaDoc.
-    options.addBooleanOption("Xdoclint:none", true)
-    options.addStringOption("-quiet")
+    // withJavadocJar()
+    // withSourcesJar()
 }
-build.finalizedBy("javadoc")
 
 jar {
     enabled = true
@@ -55,6 +74,7 @@ jar {
                 "Build-By": "https://github.com/tfreese",
                 "Build-Date": java.time.LocalDateTime.now().withNano(0),
                 "Build-JDK": System.getProperty("java.version") + " - " + System.getProperty("java.specification.vendor"),
+                // "Main-Class": project.main,
                 "Build-Title": project.name,
                 "Build-Version": project.version
         )
@@ -63,11 +83,148 @@ jar {
 
 test {
     enabled = true
+    ignoreFailures = false
+
+    // No parallel Tests: gradle --no-parallel --max-workers 1 test
+    // or 'maxParallelForks = 1'
 
     useJUnitPlatform()
 
+    jvmArgs += "--add-opens=java.base/java.net=ALL-UNNAMED"
+
+    filter {
+        // Deactivate Class
+        // excludeTestsMatching "PACKAGE.CLASS"
+
+        // Deactivate Method
+        // excludeTestsMatching "PACKAGE.CLASS.METHOD"
+
+        // Deactivate Package with Wildcards
+        // excludeTestsMatching "*.integration.*"
+
+        // Deactivate Method with Wildcards
+        // excludeTestsMatching "*stress*"
+    }
+
+    reports {
+        junitXml.required = true
+        html.required = false
+    }
+
+    testLogging {
+        showStandardStreams = false
+        // events = ["PASSED", "FAILED", "SKIPPED", "STANDARD_OUT", "STANDARD_ERROR"]
+        events = ["FAILED", "SKIPPED"]
+        // showExceptions = true
+        // showCauses = true
+        // showStackTraces = true
+        // exceptionFormat = TestExceptionFormat.FULL
+    }
+
+    // jvmArgs += "--add-opens=java.base/java.net=ALL-UNNAMED"
+
+    afterSuite { desc, result ->
+        if (!desc.parent) {
+            String output = "Results: ${result.resultType} - ${result.testCount} Tests - ${result.successfulTestCount} SUCCESSFUL, ${result.failedTestCount} FAILED, ${result.skippedTestCount} SKIPPED"
+
+            String lines = "-".repeat(output.length())
+            // String lines = Stream.generate(() -> "-").limit(output.length()).collect(Collectors.joining());
+
+            logger.lifecycle(lines)
+            logger.lifecycle(output)
+            logger.lifecycle(lines)
+        }
+    }
+
     finalizedBy jacocoTestReport
 }
+
+javadoc {
+    enabled = true
+
+    if (JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption('html5', true)
+    }
+
+    // No Errors for missing JavaDoc.
+    options.addBooleanOption("Xdoclint:none", true)
+    options.addStringOption("-quiet")
+    // options.addStringOption("charset", "UTF-8")
+
+    options.locale = "de"
+    options.encoding = "UTF-8"
+}
+
+// --add-opens=java.base/java.util.concurrent=ALL-UNNAMED // Hat zur Kompilierungszeit keine Auswirkungen
+def compilerArgs = [
+        //"--add-modules=ALL-SYSTEM"
+        //, "--add-modules=jdk.incubator.concurrent",
+        //, "--add-exports=java.base/sun.security.action=ALL-UNNAMED"
+        //, "-verbose"
+        // Compiler Warnings as Errors.
+        //, "-Werror"
+        // Enable all.
+        //, "-Xlint:all"
+        // Überflüssige Typecast, wie zum Beispiel in der Anweisung int i = (int) 0;
+        "-Xlint:cast"
+        // Verdächtige Bytecode-Dateien, beispielsweise mit anderen Merkmalen als die ebenfalls enthaltene Versionsangabe eigentlich gestattet.
+        , "-Xlint:classfile"
+        // Verwendung von Klassen oder Methoden, die als Deprecated markiert sind.
+        , "-Xlint:deprecation"
+        // Annotation @Deprecated und @deprecated-Tag im Javadoc-Kommentar widersprechen sich.
+        , "-Xlint:dep-ann"
+        // Potenzielle Division durch null.
+        , "-Xlint:divzero"
+        // Leere Anweisung nach if.
+        , "-Xlint:empty"
+        // case-Block in einer switch-Anweisung ohne abschließendes break.
+        , "-Xlint:fallthrough"
+        // return-Anweisung in einem finally-Block. Diese Konstruktion kann eine andere return-Anweisung im try-Block maskieren und zu schwer nachvollziehbarem Verhalten führen.
+        , "-Xlint:finally"
+        // Aufruf des Compilers mit einer älteren Version für den Quelltext (Schalter -source) als für die Laufzeitbibliothek (-bootclasspath).
+        // Dabei kann Bytecode entstehen, der auf der älteren Plattform nicht funktioniert, weil er sich auf die neuere Laufzeitbibliothek bezieht.
+        , "-Xlint:options"
+        // Fehlende @Override-Annotation.
+        , "-Xlint:overrides"
+        // Unerreichbares Element im Classpath.
+        , "-Xlint:path"
+        // Annotation gefunden, für die sich kein Prozessor zuständig erklärt.
+        , "-Xlint:processing"
+        // Verwendung einer generischen Klasse oder eines generischen Interface ohne Typ-Argument.
+        , "-Xlint:rawtypes"
+        // Fehlende oder falsche Definition von serialVersionUID in einer Klasse, die das Interface Serializable implementiert.
+        , "-Xlint:serial"
+        // Bezug auf ein statisches Element über eine Objektreferenz statt über den Klassennamen.
+        , "-Xlint:static"
+        // Verdächtiger ARM-Block, wie beispielsweise ARM-Block mit einer Ressource, die nicht verwendet wird, ARM-Block mit einem expliziten close-Aufruf,
+        // Definition einer close-Methode mit einer anderen Exception als IOException.
+        , "-Xlint:try"
+        // Einsatz eines generischen Typs in einem Kontext, in dem die statische Typprüfung des Compilers nicht mehr sicherstellen kann, dass Typfehler zur Laufzeit ausgeschlossen sind.
+        , "-Xlint:unchecked"
+        // Vararg-Parameter mit einem generischen Typ verbieten.
+        , "-Xlint:varargs"
+        // Disable annotation processing.
+        //, "-proc:none"
+]
+
+[compileJava, compileTestJava]*.options*.encoding = "UTF-8"
+[compileJava, compileTestJava]*.options*.debug = true
+// [compileJava, compileTestJava]*.options*.compilerArgs += compilerArgs
+
+tasks.compileJava {
+    options.compilerArgs.addAll(compilerArgs)
+}
+tasks.compileTestJava {
+    options.compilerArgs.addAll(compilerArgs)
+}
+
+// tasks.withType(JavaCompile).configureEach {
+//     // options.encoding = "UTF-8"
+//
+//     doFirst {
+//         println "Compiler args: " + options.compilerArgs
+//     }
+// }
 
 publishing {
     publications {
@@ -79,10 +236,13 @@ publishing {
 
 // https://checkstyle.sourceforge.io
 checkstyle {
+    // toolVersion = "${versions.checkstyle}"
+    toolVersion = "$version_checkstyle"
+
     // Default Directory: <root>/config/checkstyle/
     configDirectory = file("${System.getProperty('user.home')}/git/parents/config/checkstyle")
-    // configFile file("${System.getProperty('user.home')}/git/parents/config/checkstyle/checkstyle.xml")
-    // configFile rootProject.file("config/checkstyle/checkstyle.xml")
+    // configDirectory = layout.projectDirectory.dir("..").dir("..").dir("config").dir("checkstyle").asFile
+    // configFile = layout.projectDirectory.dir("..").dir("..").dir("config").dir("checkstyle").file("checkstyle.xml").asFile
 
     configProperties.put("org.checkstyle.suppressionFilter", file("${System.getProperty('user.home')}/git/parents/config/checkstyle/suppressions.xml"))
 
